# CareerCraft-LangGraph-Agent-

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  architect.py  prompt.py  requirement.py  reviewer.py
app/cli/: __init__.py  app.py  handlers.py
app/config/: __init__.py  llm.py  settings.py
app/exporter/: __init__.py  markdown.py  pdf.py
app/graph/: __init__.py  nodes.py  router.py  state.py  workflow.py
app/storage/: __init__.py  models.py  repository.py
app/templates/: full_report.md.j2  growth_plan.md.j2  resume.md.j2
app/utils/: __init__.py
tests/: __init__.py  conftest.py  eval_cases.json  test_eval.py  test_workflow.py
